# thoughtboxes-creative-canvas

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: llm.py  models.py  routes.py
backend/app/pipeline/: director.py  dna.py  formatter.py  ingestor.py  researcher.py  structurer.py
docs/: 0-initial-solution-outline.md  todo.md
frontend/: Dockerfile  package-lock.json
frontend/public/: demo-transcript.txt
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: MarkdownOutput.tsx  UploadForm.tsx
