[project]
name = "backend"
version = "0.1.0"
description = "Thought Boxes Creative Canvas – FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "openai>=1.30.0",
    "pydantic>=2.8.0",
]
